# justinthelaw

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .yamllint  AGENTS.md  LICENSE  README.md  docker-compose.yaml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  test-results.json  tsconfig.json
.claude/: CLAUDE.md
.codex/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  openai-codex-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/setup-node/: action.yaml
.github/workflows/: app.test.yml  ci.yml  deploy.yml  lint.yml  nextjs.yml  pipeline.test.yml  playwright.yaml  test.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOMIZATION.md  DEVELOPMENT.md  DIAGRAMS.md  SECURITY.md  SUPPORT.md
docs/planning/: 27Feb2026-EVALUATION_SUITE_PLAN.md
e2e/: home.spec.ts
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/pages/: index.tsx
ml/profile-qa/: README.md  requirements.txt
ml/profile-qa/profile_qa/: __init__.py  config.py  evaluate.py  export_onnx.py  gpu_health.py  merge_adapter.py  prepare_hf_artifacts.py  public_profile.py  publish.py  synthetic_data.py  train_lora.py  validation.py
ml/profile-qa/tests/: test_gpu_health.py  test_synthetic_data.py
pipeline/: .gitignore  HYPERPARAMETER.md  Makefile  README.md  config.yaml  pyproject.toml
pipeline/data/eval/: adversarial.jsonl  golden.jsonl  ood.jsonl
pipeline/scripts/: eval_dataset.py  eval_metrics.py  eval_reporting.py  evaluate_model.py  generate_dataset.py  merge_lora.py  push_hub.py  test_model.py  train_lora.py  train_model.py  train_sft.py  utils.py
pipeline/templates/: DATASET_CARD.md  MODEL_CARD.md
public/: embeddings.json  summarized_embeddings.json
scripts/: generateEmbeddings.py  requirements.txt  serve-static-preview.mjs  train.py
src/components/: ChatBox.tsx  ChatConfirmationModal.tsx  GitHubProfileDescription.tsx  LinkIconButton.tsx  ResumeCoverLetterViewer.tsx  Typewriter.tsx
src/components/ChatBox/: ChatBox.tsx  ChatBoxInputArea.tsx  ChatBoxInputResultArea.tsx  ModelSelector.tsx  Typewriter.tsx  embeddingsSearch.ts  generation.ts
src/components/ChatBox/utils/: answerGeneration.ts  contextProvider.ts  embeddingsSearch.ts  generation.ts  loadModel.ts  messageHistory.ts  modelLoader.ts  modelPreferences.ts  modelSelection.ts  types.ts
src/components/chat/components/: ChatContainer.tsx  ChatInput.tsx  ChatMessages.tsx  ChatSettings.tsx  LimitWarning.tsx  index.ts
src/components/chat/hooks/: useAIGeneration.ts  useChatHistory.ts  useModelManagement.ts
src/components/links/: LinkIconButton.tsx
src/components/profile/: GitHubProfile.tsx  ProfileVisualizerModal.tsx  ProfileVisualizerScene.tsx  useTeapotVisualizerTrace.ts  visualizerData.ts
src/components/resume/: ResumeViewer.tsx  index.ts
src/components/shared/: LinkIconButton.tsx  index.ts
src/config/: index.ts  models.ts  profile.ts  prompts.ts  site.ts
src/features/chat/: index.ts
src/features/chat/components/: ChatContainer.tsx  ChatInput.tsx  ChatMessages.tsx  ChatSettings.tsx  Typewriter.tsx  index.ts
src/features/chat/hooks/: index.ts  useAIGeneration.ts  useChatHistory.ts
src/features/profile/: GitHubProfile.tsx  index.ts
src/features/resume/: ResumeViewer.tsx
src/model/: worker.js
src/pages/: _app.tsx  index.tsx
src/services/ai/: ai.worker.ts  aiService.ts  contextProvider.ts  index.ts  modelLoader.ts  modelSelection.ts  service.ts  worker.ts
src/services/ai/tracing/: index.ts  setup.ts  spans.ts
src/services/github/: githubService.ts  index.ts
src/stores/: chatStore.ts  modelStore.ts
src/styles/: globals.css
src/types/: index.ts  worker.ts
src/utils/: deviceDetection.ts  index.ts  logger.ts
tests/: chatbot-model-loading.spec.ts  chatbot.spec.ts  example.spec.ts  export.spec.ts  home.spec.ts  models.spec.ts  visualizer.spec.ts
