[project]
name = "resume-finetuning"
version = "0.1.0"
description = "SFT LoRA fine-tuning pipeline for resume Q&A models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1.0",
  "transformers>=4.40.0",
  "accelerate>=0.27.0",
  "peft>=0.10.0",
  "trl>=0.8.0",
  "datasets>=2.18.0",
  "safetensors>=0.4.0",
  "pymupdf>=1.24.0",
  "pyyaml>=6.0.0",
  "requests>=2.31.0",
  "tqdm>=4.66.0",
  "huggingface-hub>=0.21.0",
  "optimum[onnxruntime]>=1.17.0",
  "onnx>=1.15.0",
  "onnxruntime>=1.17.0",
  "ruff>=0.7.1",
  "pyright>=1.1.387",
]


[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
exclude = [
  ".pyenv",
  ".venv",
  "archive/**",
  "backend/alembic/**",
  "backend/backend/baml_client/**",
  "**/.ipynb_checkpoints/**",
  "temp/**",
  "tmp/**",
]

select = ["E", "F", "I", "N", "D", "UP", "ANN", "S", "B", "A", "TID", "T100"]
ignore = [
  "D203",
  "D212",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "E501",
  "A002",
  "S101",
]
pydocstyle.convention = "google"
flake8-tidy-imports.ban-relative-imports = "all"
flake8-bugbear.extend-immutable-calls = ["fastapi.Depends", "fastapi.Body"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
exclude = [
  ".pyenv",
  ".venv",
  "archive/**",
  "backend/alembic/**",
  "backend/backend/baml_client/**",
  "**/.ipynb_checkpoints/**",
  "temp/**",
  "tmp/**",
]

[tool.pyright]
include = ["backend/backend"]
exclude = [
  ".pyenv",
  ".venv",
  "archive/**",
  "backend/alembic/**",
  "backend/backend/baml_client/**",
  "**/.ipynb_checkpoints/**",
  "temp/**",
  "tmp/**",
]
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
deprecateTypingAliases = true
enableReachabilityAnalysis = true
reportPropertyTypeMismatch = "error"
reportImportCycles = "error"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "error"
reportPrivateUsage = "error"
reportTypeCommentUsage = "error"
reportConstantRedefinition = "error"
reportDeprecated = "error"
reportInconsistentConstructor = "error"
reportMissingSuperCall = "warning"
reportUninitializedInstanceVariable = "error"
reportInvalidStringEscapeSequence = "error"
reportMissingParameterType = "error"
reportInvalidTypeVarUse = "error"
reportUnnecessaryIsInstance = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportAssertAlwaysTrue = "error"
reportSelfClsParameterName = "error"
reportInvalidStubStatement = "error"
reportIncompleteStub = "error"
reportUnusedExpression = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportMatchNotExhaustive = "error"
reportShadowedImports = "error"
